# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  17 Feb 2006; Roy Marples <uberlord@gentoo.org>:

    Fixed typo in functions, #123136 thanks to Alexander Danilov.

* baselayout-1.12.0_pre16 (16 Feb 2006)

  15 Feb 2006; Roy Marples <uberlord@gentoo.org>:

    tuntap now works if openvpn is installed, #122452.

  14 Feb 2006; Roy Marples <uberlord@gentoo.org>:

    ip rules setup has been documented in net.example, #107628.

    pppd should now be fully re-entrant, #122396.

  08 Feb 2006; Roy Marples <uberlord@gentoo.org>:

    New module ip6to4 that creates tunnels with IPv6 addresses based off
    global IPv4 addresses on a specified interface, #122015.
    Thanks to Antti Mäkelä for testing and ideas.

  07 Feb 2006; Roy Marples <uberlord@gentoo.org>:

    Always ensure that end_service is called, #119233 again.

    You can now specify a maxfail value for pppd (default 0), #115346.

    net.lo now depends on isapnp to work with older NICs, #121539.

    chat commands in pppd are now re-quoted, #121665.

    wpa_supplicant now looks for config files in order
        /etc/wpa_supplicant/wpa_supplicant-$iface.conf
        /etc/wpa_supplicant/wpa_supplicant.conf
        /etc/wpa_supplicant.conf
    and for these wpa_cli scripts
        /etc/wpa_supplicant/wpa_cli.sh
        /sbin/wpa_cli.action

  6 Feb 2006; Mike Frysinger <vapier@gentoo.org>:

    Update xen checks #96240 by Tuan Van and #107976 by Chris Bainbridge.

  29 Jan 2006; Mike Frysinger <vapier@gentoo.org>:

    Update modules-update to run depmod even if /proc/modules doesn't exist
    and warn if the depdir doesn't exist but the user ran in verbose mode
    #117212 by Alex Guensche.

  26 Jan 2006; Mike Frysinger <vapier@gentoo.org>:

    Add fixes by Robert Millan to consoletype so that it's more portable #80021.

    Fix grepping of --assume-kernel in modules-update as pointed out by 
    Patrick McLean in #117212.
