@@ -109,6 +109,13 @@ RC_DEVICES="auto"
 
 RC_DEVICE_TARBALL="no"
 
+# RC_SWAP_ERASE controls erasing of swap partitions at shutdown.
+# Useful for all those paranoid peeps to nuke their memory.
+
+RC_SWAP_ERASE="no"
+
+
+
 
 
 #
