@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  18 Feb 2006; Mike Frysinger <vapier@gentoo.org>:
+
+    Add patch by Craig to nuke swap at shutdown #122893.
+
   17 Feb 2006; Roy Marples <uberlord@gentoo.org>:
 
     Fixed typo in functions, #123136 thanks to Alexander Danilov.
